--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <a href="aboutme.html">About Me</a>
 <a href="classes.html">My Classes</a>
 <h1>This is my test Home Page!</h1>
+<a href="https://scratch.mit.edu/projects/334087297">Heres a link to my scratch game!</a>
 <img src="images/home.jpg" height="250">
 </body>
 </html>
