--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <a href="classes.html">My Classes</a>
 <h1>This is my test Home Page!</h1>
 <a href="https://scratch.mit.edu/projects/334087297">Heres a link to my scratch game!</a>
+<a href="https://scratch.mit.edu/projects/335225504">Heres a link to my new scratch animation!</a>
 <img src="images/home.jpg" height="250">
 </body>
 </html>
