--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <h1>This is my test Home Page!</h1>
 <a href="https://scratch.mit.edu/projects/334087297">Heres a link to my scratch game!</a>
 <a href="https://scratch.mit.edu/projects/335225504">Heres a link to my new scratch animation!</a>
+<a href="cookCalc.aia">Download my Cooking Calculator here!</a>
 <img src="images/home.jpg" height="250">
 </body>
 </html>
