--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <a href="https://scratch.mit.edu/projects/334087297">Heres a link to my scratch game!</a>
 <a href="https://scratch.mit.edu/projects/335225504">Heres a link to my new scratch animation!</a>
 <a href="cookCalc.aia">Download my Cooking Calculator here!</a>
+<a href="https://repl.it/@bamiel000/Interactive-Fiction-10">Heres a link to my interactive fiction!</a>
 <img src="images/home.jpg" height="250">
 </body>
 </html>
