--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <a href="aboutme.html">About Me</a>
 <a href="classes.html">My Classes</a>
 <h1>This is my test Home Page!</h1>
+<iframe height="400px" width="100%" src="https://repl.it/@bamiel000/Interactive-Fiction-10?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
 <a href="https://scratch.mit.edu/projects/334087297">Heres a link to my scratch game!</a>
 <a href="https://scratch.mit.edu/projects/335225504">Heres a link to my new scratch animation!</a>
 <a href="cookCalc.aia">Download my Cooking Calculator here!</a>
